Fixed formatting of canvas, though still not responsive

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -5,16 +5,12 @@ body {
 
 .canvasContainer {
     background-color: white;
-    padding: 5px;
 }
 
 h2 {
     color : white;
 }
-canvas {
-    border : 5px gold solid;
-    /*cursor : pointer;*/
-}
+
 a {
   color : #F93;
 }
