--- a/src/pages/VideoTimer/style.css
+++ b/src/pages/VideoTimer/style.css
@@ -1,6 +1,4 @@
 #videoCanvas {
-    height: 100%;
-    width: 100%;
     background-color: grey;
 }
 
@@ -21,10 +19,3 @@
         height: none;
     }
 }
-
-.canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-  }
